--- a/_assets/sass/typography/_content.scss
+++ b/_assets/sass/typography/_content.scss
@@ -19,8 +19,9 @@ li {
   list-style-position:
   outside; margin-left: $s1;
 }
+/*
 ul li   { list-style-type: disc; }
-ol li   { list-style-type: decimal; }
+ol li   { list-style-type: decimal; }*/
 
 hr {
   border: 0;
