--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 
-<div class=" vpad--xl {{page.colour}} " id="top" >
+<div class=" vpad--xl bg--light-alpha bv-bg-pattern" id="top"  style="z-index: 999; background-image: url('{{site.img}}/icons/bg-pattern.png');  ">
   <div class="container">
-    <div class="width width--xl  text--left text text--white " >
-       <div class="text--lg">{{page.intro}}</div>
+    <div class="width width--lg text--left text--black " >
+       <div class="text--md text--justify">{{page.intro}}</div>
        <div class="space--md"></div>
     </div>
   </div>
@@ -14,27 +14,78 @@ layout: default
 
 
 
-{% assign destinations = site.html_pages | where: 'content-pages', 'true'  | sort:'nav-order' %}
+<div class="row row--xl-6-6  row--no-gutters ">
+    <div class=" col--xl-5  " >
+      <div class="vpad--md">
+        <div class="width width--lg bv-hpad">
+          <div class="space--xl"></div>
+          <h1 class="title title--lg ">Highlights</h1>
+          <div class="space--xl"></div>
+          <h2 class="text text--xxl ">Klicken Sie auf die interaktive Karte</h2>
+          <div class="space--md"></div>
+          <div id="bv-myBtn" style="cursor: pointer;" class=" btn btn--bv-red bv-mob-show" >Karte öffnen</div>
+          <div class="space--md"></div>
+          <div class="text text--xl text--bolder">Legende</div>
+          <div class="space--md"></div>
+          <div class="bv-abenteuer text text--md text--normal">Für Abenteurer</div>
+          <div class="bv-kultur text text--md text--normal">Für Kulturliebhaber</div>
+          <div class="bv-natur text text--md text--normal">Für City-Fans</div>
+          <div class="bv-cities text text--md text--normal">Für Stadtmenschen</div>
+          <div class="space--xl"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col col--xl-7 bv-modal" id="bv-myModal" >
+             <div class="bv-close" ></div>
+         <div class="bv-modal-content-details">
+           <div class="map"  id="map"></div>
+         </div>
 
-<div class="space--lg"></div>
-  {% for destination in destinations %}
-<div class=" vpad--lg  bg--white">
-  <div class="container">
-  <div class="bob {% cycle 'bob--swap', '' %} ">
-    <div class="bob__img">
-      <a href="{{site.baseurl}}{{destination.url}}"  class="bg-img bg-img--4-3 " style="background-image: url('{{site.img}}/content/{{destination.id}}.jpg');" ></a>
-    </div>
-    <div class="bob__text">
-      <div class="space--xs"></div>
-      <h3 class="title title--lg text--blue text--bold  ">{{destination.title}}</h3>
-      <div class="space--xs"></div>
-      <p class="text  text--lg">{{destination.summary}}</p>
-      <div class="space--lg"></div>
-      <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--f-yellow" >Jetzt entdecken</a>
-    </div>
   </div>
 </div>
-</div>
 
 
-{% endfor %}
+
+  {% include page/map/map.html %}
+
+ <script>
+
+
+
+// Get the modal
+var modal = document.getElementById('bv-myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("bv-myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("bv-close")[0];
+
+// When the user clicks the button, open the modal
+btn.onclick = function() {
+  //alert (modal);
+  modal.style.display = "block";
+    $('body').addClass('bv-disable-scroll');
+
+    $('#bv-myModal').on('shown.bs.modal', function() {
+          map.resize();
+        });
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+      $('body').removeClass('bv-disable-scroll');
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+        $('body').removeClass('bv-disable-scroll');
+  }
+}
+
+
+
+</script>
