--- a/_assets/sass/_styles.scss
+++ b/_assets/sass/_styles.scss
@@ -5,46 +5,47 @@
    Dividers & Alignment
    ========================================================================== */
 
-   .bv-title-divider::after{
-       content: ('~');
-       display: block;
-       font-size: $s9;
-       margin: -5px 0 -10px 1px;
+.bv-text-shadow-white{
+  text-shadow: 0 0 20px rgba($white, 1);
+}
 
+.bv-title-divider::after{
+   content: ('');
+   display: block;
+   font-size: $s9;
+   margin: -5px 0 -10px 1px;
 
+   @include bp($md) {
+     content: ('');
+     display: block;
+     font-size: $s12;
+     margin: -12px 0 -20px 1px;
+ }
 
-     @include bp($md) {
-         content: ('~');
-         display: block;
-         font-size: $s12;
-         margin: -12px 0 -20px 1px;
+   @include bp($xl) {
+     content: ('');
+     display: block;
+     font-size: $s14;
+     margin: -30px 0 -30px 1px;
 
-     }
-
-     @include bp($xl) {
-         content: ('~');
-         display: block;
-         font-size: $s14;
-         margin: -30px 0 -30px 1px;
-
-     }
    }
+ }
 
 
 .bv-headline-divider::after {
-    content: ('~~~');
+    content: ('---');
     display: block;
     font-size: $s5;
     font-weight: bold;
-    letter-spacing: -.02px;
+    letter-spacing: -2px;
     margin: 2px 0 -2px 1px;
 
     @include bp($xl) {
-        content: ('~~~');
+        content: ('----');
         display: block;
         font-size: $s5;
         font-weight: bold;
-        letter-spacing: -.02px;
+        letter-spacing: -6px;
         margin: 6px 0 -4px 1px;
 
     }
@@ -52,10 +53,86 @@
 
 
 
+/* ==========================================================================
+   mobile
+ ========================================================================== */
+
+
+
+.bv-mob-show{
+    display: block;
+
+  @include bp($xl) {
+      display: none;
+
+  }
+}
+
+.bv-mob-hide{
+    display: none;
+
+  @include bp($xl) {
+      display: block;
+
+  }
+}
+
+.bv-hpad {
+  padding-left: $s2;
+  padding-right: $s2;
+
+@include bp($lg) {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+@include bp($xl) {
+padding-left: $s7;
+//padding-right: $s4;
+}
+
+@include bp($xxl) {
+  padding-left: $s9;
+  //padding-right: $s4;
+}
+
+@include bp($xxxl) {
+  padding-left: $s10;
+  //padding-right: $s4;
+}
+
+}
+
+
 
 /* ==========================================================================
-   Parallax
+   Parallax & BG
    ========================================================================== */
+
+
+.bv-bg-pattern {
+
+  background-size: 55%;
+  background-position: center;
+
+  @include bp($md){
+    background-size: 50%;
+  }
+
+  @include bp($lg){
+    background-size: 35%;
+  }
+
+  @include bp($xl){
+    background-size: 25%;
+  }
+
+  @include bp($xxl){
+    background-size: 15%;
+  }
+}
+
+
 
 .bv-parallax{
   background-attachment: fixed;
@@ -65,21 +142,48 @@
 }
 
 
-@media only screen and (max-width: 1024px) {
 
-.bv-remove-bg{
-  background-image: none!important;
 
-  &--blue{
+@media only screen and (max-width: 969px)  {
+
+  .bv-hide-bg-mob{
     background-image: none!important;
-    background-color: $f-blue;}
+    /*
+    @include bp($sm){
+      top: $s0;
+      left: $s0;
+      width: 146px;
+    }*/
+
+  }
+
+  .bv-parallax{
+        background-attachment: scroll;
+        background-size: cover;
+    }
+
 }
 
+@media only screen and  (min-width: 1024px) {
+
+  .bv-show-bg-mob{
+      background-image: none!important;
+
+    }
+}
+
+@media only screen and  (min-width: 970px) and (max-width: 1024px) {
+  .bv-show-bg-mob{
+      background-image: none!important;
+
+    }
 .bv-parallax{
       background-attachment: scroll;
       background-size: cover;
   }
 }
+
+
 
 
 
