--- a/_assets/sass/core/_colours.scss
+++ b/_assets/sass/core/_colours.scss
@@ -14,8 +14,6 @@ $orange-dark:    #e67812;
 $orange-darker:  #d66000;
 
 // // brand colours
-$f-red: #fc4b38;
-$f-lightblue: #a3cdd4;
-$f-blue: #012E5C;
-$f-yellow: #FAC601;
-$f-sand: #efeee2;
+$bv-red: #c30e2e;
+$bv-lightblue: #C1DFE6;
+$bv-blue: #012E5C;
