--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -34,6 +34,7 @@
   // page
   'page/footer',
   'page/banner',
+  'page/map',
   'page/offer-promo',
 
   // components
@@ -49,5 +50,6 @@
 
   // general
   'styles'
+
 
 ;
