--- a/_assets/sass/typography/_families.scss
+++ b/_assets/sass/typography/_families.scss
@@ -3,6 +3,5 @@
 // additional families need to included in includes > page > head
 
 $font-core: 'Open Sans', 'Helvetica Neue', sans-serif;
-$font-title-01: 'josefin-sans', 'Helvetica Neue', sans-serif;
-$font-title-sc: 'Fredericka the Great', cursive;
-//$font-title-sc: 'le-havre', 'Helvetica Neue', sans-serif;
+$font-title-01: 'lato', 'Helvetica Neue', sans-serif;
+$font-title-sc: 'Tangerine', cursive;
