--- a/_assets/sass/typography/_text.scss
+++ b/_assets/sass/typography/_text.scss
@@ -3,16 +3,16 @@
 .text {
   font-family: $font-title-01;
   // sizes
-  &--xxxl { font-size: 2.5rem; line-height: 1.6; letter-spacing: 0; }
-  &--xxl { font-size: 2.1rem; line-height: 1.5; letter-spacing: 0; }
-  &--xl  { font-size: 1.8rem; line-height: 1.23; letter-spacing: 0; }
-  &--lg  { font-size: 1.6rem; line-height: 1.2; letter-spacing: 0; }
-  &--md  { font-size: 1.4rem; line-height: 1.2; letter-spacing: 0; }
+  &--xxxl { font-size: 2.5rem; line-height: 1.5; letter-spacing: 0; }
+  &--xxl { font-size: 1.8rem; line-height: 1.6; letter-spacing: 0; }
+  &--xl  { font-size: 1.6rem; line-height: 1.55; letter-spacing: 0; }
+  &--lg  { font-size: 1.4rem; line-height: 1.5; letter-spacing: 0; }
+  &--md  { font-size: 1.2rem; line-height: 1.5; letter-spacing: 0; }
   &--sm  { font-size: .9rem; }
 
   // styles
   &--italic       { font-style: italic; }
-  &--light        { font-weight: 300; }
+  &--light        { font-weight: 200; }
   &--normal       { font-weight: 400; }
   &--medium         { font-weight: 500; }
   &--bold         { font-weight: 600; }
@@ -27,17 +27,20 @@
 
   // colours
   &--white { color: $grey-lightest; }
-  &--black { color: $grey-dark; }
-  &--blue { color: $f-blue; }
-  &--red { color: $f-red; }
+  &--black { color: $black; }
+  &--blue { color: $bv-blue; }
+  &--red { color: $bv-red; }
+  &--orange { color: $orange; }
 
   // alignment
   &--left   { text-align: left; }
   &--right  { text-align: right; }
   &--center { text-align: center; }
+  &--justify { text-align: justify; }
   @include bp($lg) {
     &--bp-left   { text-align: left; }
     &--bp-right  { text-align: right; }
     &--bp-center { text-align: center; }
+    &--justify { text-align: justify; }
   }
 }
