--- a/_includes/components/logo-se.html
+++ b/_includes/components/logo-se.html
@@ -1,3 +1,3 @@
-<a id="track-se-logo{{include.placement | prepend: '-'}}" class="logo logo--se{% if include.small %} logo--se-sm{% endif %}" href="{{site.core-se-link}}">
+<a id="track-se-logo{{include.placement | prepend: '-'}}" class="logo logo--se{% if include.small %} logo--se-sm{% endif %}" href="{{site.core-se-link}}{{site.se-tracking-link}}">
   <img src="{{site.img}}/logo/secret-escapes.svg" alt="Secret Escapes logo">
 </a>
