--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -4,10 +4,10 @@ layout: default
 
 
 
-<div class=" vpad--xxl bg--f-blue " id="top" >
+<div class=" vpad--xl bg--light-alpha  bv-bg-pattern" id="top"  style="background-image: url('{{site.img}}/icons/bg-pattern.png'); ">
   <div class="container">
-    <div class="width width--xl  text--left text text--white " >
-       <div class="text--xl">{{page.intro}}</div>
+    <div class="width width--xl  text--left text text--black " >
+       <div class="text--md ">{{page.intro}}</div>
        <div class="space--md"></div>
     </div>
   </div>
@@ -18,13 +18,16 @@ layout: default
 
 {% for section in site.data[page.id] %}
 
-    <div id="{{section.id}}" class="harvey{% cycle '', ' harvey--swap' %}  {% cycle 'bg--f-sand', 'bg--white' %}">
-      <div class="harvey__img" style="background-image: url('{{site.img}}/content/{{page.id}}/{{section.img}}.jpg');"> </div>
-      <div class="harvey__text boxpad--xl text text--lg text--black ">
-        <div class="space--lg"></div>
-        <h2 class="title serif-title bv-headline-divider text--blue  ">{{section.title}}</h2>
-        <p>{{section.description}}</p>
-        <div class="space--lg"></div>
+    <div id="{{section.id}}" class="harvey{% cycle ' harvey--swap', '' %} bv-parallax bv-hide-bg-mob bg--black-mob"  style="background-image: url('{{site.img}}/content/{{page.id}}/bg-{{section.id}}.jpg'); background-repeat: none; background-position: center; background-size: cover;">
+      <div class="harvey__img bv-show-bg-mob" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-{{section.id}}.jpg'); background-repeat: none; background-position: center; background-size: cover;"> </div>
+      <div class="harvey__text boxpad--xl text text--md  ">
+        <div class="bg--black-alpha  text--white boxpad--xl " >
+        <div class="space--md"></div>
+        <h2 class="title title--xl text--light text--upper ">{{section.title}}</h2>
+        <div class="space--sm"></div>
+        <p class=" text--left">{{section.description}}</p>
+        <div class="space--xl"></div>
+      </div>
       </div>
     </div>
  {% endfor %}
