--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -3,16 +3,14 @@ layout: default
 ---
 
 
-
-<div class=" vpad--xl bg--light-alpha  bv-bg-pattern" id="top"  style="background-image: url('{{site.img}}/icons/bg-pattern.png'); ">
+<div class="vpad--xl bg--light-alpha bv-bg-pattern" id="top" style="background-image: url('{{site.img}}/icons/bg-pattern.png'); ">
   <div class="container">
-    <div class="width width--xl  text--left text text--black " >
-       <div class="text--md ">{{page.intro}}</div>
+    <div class="width width--lg text--left text--black" >
+       <div class="text--md text--justify">{{page.intro}}</div>
        <div class="space--md"></div>
     </div>
   </div>
 </div>
-
 
 
 
@@ -30,4 +28,5 @@ layout: default
       </div>
       </div>
     </div>
+    
  {% endfor %}
